--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Load Google Fonts (Poppins for Headings, Inter for Body) -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Inter:wght@400;600&family=Space+Mono&display=swap" rel="stylesheet">
     <!-- Link to external stylesheet -->
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Load Lucide Icons -->
     <script type="module" src="https://unpkg.com/lucide@latest"></script>
 
@@ -115,6 +115,6 @@
     </footer>
 
     <!-- JavaScript Logic -->
-    <script type="module" src="/public/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
