--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
         </div>
     </footer>
 
+    <!-- Firebase Configuration Injection -->
+    <script>
+        window.__firebase_config__ = {
+            apiKey: "$FIREBASE_API_KEY",
+            authDomain: "$FIREBASE_AUTH_DOMAIN",
+            projectId: "$FIREBASE_PROJECT_ID",
+            storageBucket: "$FIREBASE_STORAGE_BUCKET",
+            messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
+            appId: "$FIREBASE_APP_ID",
+            measurementId: "$FIREBASE_MEASUREMENT_ID"
+        };
+    </script>
+
     <!-- JavaScript Logic -->
     <script type="module" src="/js/main.js"></script>
 </body>
