--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
     </footer>
 
     <!-- JavaScript Logic -->
+    <script>
+        // Firebase configuration will be injected here by Netlify's build process
+        window.__firebase_config__ = {
+            apiKey: "VITE_FIREBASE_API_KEY",
+            authDomain: "VITE_FIREBASE_AUTH_DOMAIN",
+            projectId: "VITE_FIREBASE_PROJECT_ID",
+            storageBucket: "VITE_FIREBASE_STORAGE_BUCKET",
+            messagingSenderId: "VITE_FIREBASE_MESSAGING_SENDER_ID",
+            appId: "VITE_FIREBASE_APP_ID"
+        };
+        // Also ensure __app_id is defined for consistency with main.js
+        window.__app_id = "VITE_FIREBASE_PROJECT_ID"; // Assuming projectId is used for appId
+    </script>
     <script type="module" src="/js/main.js"></script>
 </body>
 </html>
