--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
     <title>CodeByKavin – Explore My Creations</title>
+    <meta name="title" content="CodeByKavin – Explore My Creations">
+    <meta name="description" content="Discover fun, productivity, and experimental apps built by Kavin. A personal app store showcasing various projects.">
+    <meta name="author" content="Kavinkumar R">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://codebykavin.netlify.app/">
+    <meta property="og:title" content="CodeByKavin – Explore My Creations">
+    <meta property="og:description" content="Discover fun, productivity, and experimental apps built by Kavin. A personal app store showcasing various projects.">
+    <meta property="og:image" content="https://codebykavin.netlify.app/assets/favicon.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://codebykavin.netlify.app/">
+    <meta property="twitter:title" content="CodeByKavin – Explore My Creations">
+    <meta property="twitter:description" content="Discover fun, productivity, and experimental apps built by Kavin. A personal app store showcasing various projects.">
+    <meta property="twitter:image" content="https://codebykavin.netlify.app/assets/favicon.png">
+
     <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.png">
