--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
         <!-- Loading spinner will be shown initially by JS -->
     </main>
 
+    <!-- Floating Action Bar for App Detail Page (Mobile Only) -->
+    <div id="app-detail-fab" class="fixed bottom-0 left-0 right-0 z-40 lg:hidden p-3 bg-card-dark/80 backdrop-blur-md border-t border-accent-primary/20 transform translate-y-full transition-transform duration-300">
+        <!-- Content will be injected by JS -->
+    </div>
+
     <!-- Floating Back to Top Button -->
     <button id="back-to-top" class="fixed bottom-6 right-6 p-3 rounded-full bg-accent-primary text-[#0F111A] shadow-xl transition-all duration-300 opacity-0 transform translate-y-4 hover:scale-110" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
         <i data-lucide="chevron-up" class="w-6 h-6"></i>
